<resources>
    <string name="app_name">MusicStructureApp</string>

    <string name="songDesc">Display area of ​​the album or a single CD cover song,
        song name and will be a multimedia player Other screens leads to other parts of the application.</string>

    <string name="search_title">Songname</string>

    <string name="songName">Here is a Song title</string>

    <string name="LibraryText">Screen is going to display the list of all downloaded
    songs in a scroll view. It will use the getResourse function </string>

    <string name="searchText"> Search screen. A search function will show the song/songs,
        starting while the user is typing, in a list if applicable.
        The song can be selected and then started by clicking on the player button.
    </string>

    <string name="menu">Menu</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="play">Player</string>
    <string name="backbutton">back</string>
    <string name="nextbutton">next</string>
    <string name="playbutton">play</string>
    <string name="stopbutton">stop</string>
    <string name="shuffle">Discover</string>

    <string name="settingsText">Settings screen. It has on top buttons which will lead to different
        areas and the settings itself will have a spinner dropdown menu to let the user
        select their option.</string>

    <string name="settingsBtn1">Theme color</string>
    <string name="settingsBtn2">Connection</string>
    <string name="settingsBtn3">Recommend</string>
    <string name="settingsBtn4">Song arrangement</string>
    <string name="settingsdsc1">Change the color of your app</string>
    <string name="settingsdsc2">choose which connection for downloads</string>
    <string name="settingsdsc3">Have recommendations be shown to you</string>
    <string name="settingsdsc4">how to sort songs</string>

    <string-array name="spinSet1">
        <item>Orange</item>
        <item>Light blue</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Dark blue</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string-array name="spinSet2">
        <item>Download with cable only</item>
        <item>Any connection</item>
        <item>Download with wifi only</item>
    </string-array>

    <string-array name="spinSet3">
        <item>only friend referrals</item>
        <item>only new music</item>
        <item>always</item>
        <item>only music of certain genres</item>
        <item>only if idle</item>
    </string-array>

    <string-array name="spinnerSet4">
        <item>alphabetical</item>
        <item>artists</item>
        <item>most listened to</item>
        <item>date of addition</item>
        <item>only music of certain genres</item>
    </string-array>
</resources>
